--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-string-diff": "^0.2.0",
+    "tesseract.js": "^3.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
