--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "photo-compare",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://george-liu.com/photo-compare/",
+  "homepage": "https://george-liu.com/#/photo-compare/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
